[XForms] xf:textarea appears to have 4096 characters size restriction. Bug 357652, patch by surkov, r=doronr+aaronr